--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "node server.js --no-clear"
+    "start": "node server.js --no-clear",
+    "release": "yarn build && yarn start"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -21,5 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "sirv-cli": "^2.0.0"
+  },
+  "engine":{
+    "node": "14.x"
   }
 }
