--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "node server.js --no-clear",
-    "release": "yarn build && yarn start"
+    "release": "yarn && yarn build && yarn start"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
