--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "heroku-postbuild": "yarn build"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
@@ -20,6 +20,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "sirv-cli": "^2.0.0",
